# oneDAL

./: .bazelrc  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  BUILD  CONTRIBUTING.md  IMPROVEMENT_SUMMARY.md  INSTALL.md  MAINTAINERS.md  MODULE.bazel  ONBOARDING_IMPROVEMENT_PLAN.md  QUICK_ASSESSMENT.md  README.md  WORKSPACE  benchmark_hdbscan.py  bibliography.html  daal-interfaces.html  data-analytics-pipeline.html  deprecation.html  examples.html  genindex.html  grain_bench  grain_bench.cpp  index.html  installation.html  local_extra_toolchain_extension.bzl  makefile  makefile.lst  makefile.ver  max  objects.inv  oneapi-interfaces.html  quick-start.html  search.html  searchindex.js  system-requirements.html  test_patching.py  third-party-programs.txt  validate_hdbscan_params.py
.ci/: AGENTS.md
.ci/env/: MKLConfig.cmake  apt.sh  bazelisk.ps1  bazelisk.sh  editorconfig-checker.sh  environment.yml  openblas.sh  tbb.bat  tbb.sh
.ci/pipeline/: build-and-test-win.yml  ci.yml  docs.yml
.ci/scripts/: abi_check.sh  abicheck_build_plugin.sh  abicheck_emit_facts.sh  build.sh  clang-format.sh  collect_opencl_rt.ps1  compare_windows_release.ps1  install_basekit.sh  install_dpl.sh  test.bat  test.sh  test_bazel_release_cmake_example.ps1
.claude/: settings.local.json
.github/: .abicheck-suppress.yaml  .abignore  .licenserc.yaml  .mergify.yml  CODEOWNERS  fix.coverity-2024.12.patch  pull_request_template.md  renovate.json
.github/instructions/: PR_REVIEW_TEMPLATES.md  README.md  build-systems.instructions.md  build-systems.instructions.md.bak  build-systems.md  ci-workflows.md  coding-guidelines.md  cpp-coding-guidelines.instructions.md  cpp-coding-guidelines.md  cpp.md  documentation.instructions.md  documentation.md  examples.instructions.md  examples.md  general.instructions.md  general.md
.github/workflows/: abicheck-baseline.yml  check-intel-urls.yml  ci-aarch64.yml  ci-conda-recipe.yml  ci.yml  coverity.yml  docker-validation-ci.yml  docker-validation-nightly-WITH-EXAMPLES.yml  docker-validation-nightly.yml  docs-release.yml  label-enforcement.yml  nightly-build.yml  nightly-test.yml  openssf-scorecard.yml  pr-checklist.yml  renovate-validation.yml  skywalking-eyes.yml  slack-pr-notification.yml  test-permissions.yml
api/: index.html
api/algorithms/: index.html
api/data-management/: accessors.html  array.html  backend-primitives.html  data-sources.html  graph-service.html  graphs.html  index.html  tables.html
api/spmd/: communicator.html  index.html  overview.html
ci/: AGENTS.md
cmake/templates/: oneDALConfig.cmake.in
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml  pack.sh  test-devel-dpcpp.sh  test-devel.sh
contribution/: coding_guide.html  cpu_features.html  ideas.html  threading.html
cpp/: AGENTS.md
cpp/daal/: AGENTS.md  BUILD  thread_dynamic.lds
cpp/oneapi/: AGENTS.md  dal.hpp
daal/: analysis.html  cpu-vs-gpu.html  training-prediction.html
daal/data-management/: data-dictionaries.html  data-management.html  data-model.html  data-serialization-and-deserialization.html  data-sources.html  essential-interfaces.html  generic-interfaces.html  numeric-tables-types.html  numeric-tables.html
daal/services/: callback-for-host-application.html  extracting-version-information.html  handling-errors.html  managing-computational-environment.html  managing-memory.html  services.html
daal/usage/: algorithms.html  computation-modes.html  index.html
data/: BUILD  dbscan_dense.csv  hdbscan_bench.csv  hdbscan_bench_labels.csv  hdbscan_bench_onedal_labels.csv  hdbscan_bench_summary.txt  hdbscan_dense.csv  moons_noise_2200.csv  overlap_blobs_3k.csv  simple_blobs_1k.csv  stump_test_data.csv  stump_train_data.csv  tiny_10.csv  varied_7500.csv
deploy/: AGENTS.md
deploy/local/: BUILD  dal  sycl_cache.sh  vars_lnx.sh
deploy/pkg-config/: BUILD  generate_pkgconfig.py  pkg-config.cpp  pkg-config.tpl
dev/: AGENTS.md  download_tbb.sh
dev/bazel/: AGENTS.md  README.md  cc.bzl  daal.bzl  dal.bzl  flags.bzl  release.bzl  repos.bzl  run_examples_split.sh  scripts.bzl  utils.bzl
dev/data/: BUILD  XM_100.csv
dev/docker/: onedal-dev.Dockerfile
dev/l0_tools/: zeinfo.cpp  zexx.hpp
dev/make/: common.mk  deps.mk  deps.mkl.mk  deps.ref.mk
dev/release_tests/: BUILD  compare_release_trees.py  package_metadata_test.sh
dev/version_scripts/: BUILD  libonedal.so.map  libonedal_core.so.def  libonedal_core.so.map  libonedal_dpc.so.map  libonedal_parameters.so.map  libonedal_parameters_dpc.so.map  libonedal_thread.so.map  onedal.def  onedal_core.def  onedal_dpc.def
docs/: AGENTS.md  Makefile  requirements.txt
docs/dalapi/: directives.py  generator.py  transformers.py  utils.py
docs/doxygen/: doxygen_conf_cpp.txt  doxygen_conf_cpp_examples.txt  doxygen_conf_cpp_web.txt
docs/source/: bibliography.rst  conf.py  deprecation.rst  installation.rst  substitutions_common.txt
examples/: AGENTS.md  cpp.html  dpc.html
examples/cmake/: setup_examples.cmake
examples/cpp/: basic_statistics_dense_batch.html  basic_statistics_dense_online.html  column_accessor_homogen.html  connected_components_batch.html  cor_dense_batch.html  cor_dense_online.html  cov_dense_batch.html  cov_dense_biased_batch.html  cov_dense_biased_online.html  cov_dense_online.html  csr_accessor.html  csr_table.html  dbscan_brute_force_batch.html  df_cls_dense_batch.html  df_reg_dense_batch.html  directed_graph.html  graph_service_functions.html  heterogen_table.html  homogen_table.html  jaccard_batch.html  jaccard_batch_app.html  kmeans_init_dense.html  (+35 more)
onedal/: glossary.html  gpu_support.html  introduction.html  notations.html
rfcs/: 20250612-static-libs-handling.md
scripts/: benchmark_sklearnex_hdbscan.py  benchmark_sklearnex_hdbscan_hard.py  gen_excel.py  gen_figures.py  hdbscan_benchmark.py  hdbscan_benchmark_extended.py  hdbscan_compare.py  hdbscan_compare_sklearn.py  hdbscan_full_benchmark.py  hdbscan_method_comparison.py  hdbscan_metric_test.cpp  hdbscan_metric_validation.py  hdbscan_plot_correctness.py  hdbscan_plot_summary.py  hdbscan_stress_compare.py
(+2752 files in other folders)
