#===============================================================================
# Copyright contributors to the oneDAL project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#===============================================================================

module(name = "onedal")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "catch2", version = "3.8.1")
bazel_dep(name = "fmt", version = "11.2.0")

declare_onedal_config = use_repo_rule("@onedal//dev/bazel/config:config.bzl", "declare_onedal_config")
declare_onedal_config(name = "config",)

sh_config_ext = use_extension("@onedal//dev/bazel/toolchains:cc_toolchain_extension.bzl", "cc_toolchain_extension")
use_repo(sh_config_ext, "onedal_cc_toolchain")
register_toolchains("@{}//:all".format("onedal_cc_toolchain"))


extra_toolchain_ext = use_extension("@onedal//dev/bazel/toolchains:extra_toolchain_extension.bzl", "onedal_extra_toolchain_extension")
use_repo(extra_toolchain_ext, "onedal_extra_toolchain")
register_toolchains("@{}//:all".format("onedal_extra_toolchain"))


opencl_repo = use_repo_rule("@onedal//dev/bazel/deps:opencl.bzl", "opencl_repo")
opencl_repo(name = "opencl")

openblas_repo = use_repo_rule("@onedal//dev/bazel/deps:openblas.bzl", "openblas_repo")
openblas_repo(name = "openblas", root_env_var = "OPENBLASROOT",)

tbb_repo = use_repo_rule("@onedal//dev/bazel/deps:tbb.bzl", "tbb_repo")
tbb_repo(
    name = "tbb",
    root_env_var = "TBBROOT",
    urls = [
        "https://files.pythonhosted.org/packages/93/4b/2e29f4266be5a66f21fc2dadcde48f9acea86119d6fb1bb2d2a451222ff7/tbb-2022.0.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        "https://files.pythonhosted.org/packages/ff/8c/1eb1f856a7a328242d524f1bf64f2a212d46ce5651168e7c8bc7aeaf0f44/tbb_devel-2022.0.0-py2.py3-none-manylinux_2_28_x86_64.whl",
    ],
    sha256s = [
        "15a15a4e3ea4c3f3198bdb3c55fac75c589e15ed2ad0bbb080900d355c5b017e",
        "474e4ed1dce2efeea1d3652e295a97713df5d0ed854c937ee7d0464c38353c36",
    ],
    strip_prefixes = [
        "tbb-2022.0.0.data/data",
        "tbb_devel-2022.0.0.data/data",
    ]
)

mpi_repo = use_repo_rule("@onedal//dev/bazel/deps:mpi.bzl", "mpi_repo")
mpi_repo(
    name = "mpi",
    root_env_var = "MPIROOT",
    urls = [
        "https://files.pythonhosted.org/packages/0a/7c/0f4de62a3463e4ebcf232352b231427f3b34c6a0a1b102a94da3246cad76/impi_rt-2021.14.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        "https://files.pythonhosted.org/packages/10/9f/4ee3244c078b9e9e8f65ec51760e7a6e52988abba92a285ab8b0c4dbafff/impi_devel-2021.14.0-py2.py3-none-manylinux_2_28_x86_64.whl",
    ],
    sha256s = [
        "f06ac9eba3de9609fb257d714e3041f82334ccfe27a9bec0f90007d6381dd52e",
        "6a6ec66719ac4884a40a0504f4f186f51ee4169bece5f4486c31138ed6bcc87d",
    ],
    strip_prefixes = [
        "impi_rt-2021.14.0.data/data",
        "impi_devel-2021.14.0.data/data",
    ]
)

ccl_repo = use_repo_rule("@onedal//dev/bazel/deps:ccl.bzl", "ccl_repo")
ccl_repo(
    name = "ccl",
    root_env_var = "CCL_ROOT",
    urls = [
        "https://files.pythonhosted.org/packages/c4/34/84fcf891faabfcd88e1e054a9268cdbefac8c22ab37d7eea2d9a3bda0f52/oneccl_devel-2021.14.0-py2.py3-none-manylinux_2_28_x86_64.whl",
    ],
    sha256s = [
        "580641c9d296b673d225ed3ca740b3356d7408a5c792de596a8836fde7d6c79e",
    ],
    strip_prefixes = [
        "oneccl_devel-2021.14.0.data/data",
    ]
)

dpl_repo = use_repo_rule("@onedal//dev/bazel/deps:dpl.bzl", "dpl_repo")
dpl_repo(
    name = "dpl",
    root_env_var = "DPL_ROOT",
    urls = [
        "https://files.pythonhosted.org/packages/95/f6/18f78cb933e01ecd9e99d37a10da4971a795fcfdd1d24640799b4050fdbb/onedpl_devel-2022.7.1-py2.py3-none-manylinux_2_28_x86_64.whl",
    ],
    sha256s = [
        "3b270999d2464c5151aa0e7995dda9e896d072c75069ccee1efae9dc56bdc417",
    ],
    strip_prefixes = [
        "onedpl_devel-2022.7.1.data/data",
    ],
)
   
mkl_repo = use_repo_rule("@onedal//dev/bazel/deps:mkl.bzl", "mkl_repo")
mkl_repo(
    name = "mkl",
    root_env_var = "MKLROOT",
    urls = [
        #core libs .so.2
        "https://anaconda.org/conda-forge/mkl/2025.2.0/download/linux-64/mkl-2025.2.0-h901ac74_628.conda",
        #mkl inmclude folder without oneapi
        "https://files.pythonhosted.org/packages/11/58/6f583b3bac7d3952a89a00ab34e61baa17f6d6de3454a8005958289bef22/mkl_include-2025.2.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        "https://files.pythonhosted.org/packages/b5/a7/157e11a96161091807f0f8f519591d3f9c227702d1390037ffd6d08d4d9a/mkl_static-2025.2.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        # oneMKL SYCL C++ headers
        # Provides headers for oneAPI-style programming using SYCL (e.g., dpc++/onemkl/*.hpp)
        "https://files.pythonhosted.org/packages/67/60/183badc2d807be1abb95a20315e84a2075cb44a1d1ede104d42cb1ed3092/onemkl_sycl_include-2025.2.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        # Development package for MKL SYCL (DPC++ linkage)
        # Contains symlinks and additional files for building with SYCL-enabled MKL
        "https://files.pythonhosted.org/packages/08/30/a28cfc8f9a982a5998940b808288f58f4ba2607e50a18f97207b7428f602/mkl_devel_dpcpp-2025.2.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        # oneMKL SYCL: Data Fitting domain
        # Provides libmkl_sycl_data_fitting.so.5 (regression, spline fitting, etc.)
        "https://anaconda.org/conda-forge/onemkl-sycl-datafitting/2025.2.0/download/linux-64/onemkl-sycl-datafitting-2025.2.0-haf5e11a_628.conda",
        # oneMKL SYCL: BLAS domain
        # Provides libmkl_sycl_blas.so.5 for SYCL-based BLAS routines (e.g., gemm, dot)
        "https://anaconda.org/conda-forge/onemkl-sycl-blas/2025.2.0/download/linux-64/onemkl-sycl-blas-2025.2.0-haf5e11a_628.conda",
        # oneMKL SYCL: DFT (Discrete Fourier Transform)
        # Provides libmkl_sycl_dft.so.5
        "https://anaconda.org/conda-forge/onemkl-sycl-dft/2025.2.0/download/linux-64/onemkl-sycl-dft-2025.2.0-haf5e11a_628.conda",
        # oneMKL SYCL: LAPACK domain
        # Provides libmkl_sycl_lapack.so.5 (eigenvalue solvers, linear systems, etc.)
        "https://anaconda.org/conda-forge/onemkl-sycl-lapack/2025.2.0/download/linux-64/onemkl-sycl-lapack-2025.2.0-haf5e11a_628.conda",
        # Main DPC++ MKL runtime (SYCL dispatcher)
        # Provides libmkl_sycl.so.5 — the core dispatcher that dynamically loads specific domain libraries.
        "https://files.pythonhosted.org/packages/25/f4/e57232bf293e1a88cd9e48c347030bb6d95a29cdeb9e264822eed595e989/mkl_dpcpp-2025.2.0-py2.py3-none-manylinux_2_28_x86_64.whl",
        # oneMKL SYCL: Sparse domain
        # Provides libmkl_sycl_sparse.so.5 (sparse BLAS, sparse solvers)
        "https://anaconda.org/conda-forge/onemkl-sycl-sparse/2025.2.0/download/linux-64/onemkl-sycl-sparse-2025.2.0-haf5e11a_628.conda",
        # oneMKL SYCL: RNG (Random Number Generator)
        # Provides libmkl_sycl_rng.so.5
        "https://anaconda.org/conda-forge/onemkl-sycl-rng/2025.2.0/download/linux-64/onemkl-sycl-rng-2025.2.0-haf5e11a_628.conda",
        # oneMKL SYCL: VM (Vector Math)
        # Provides libmkl_sycl_vm.so.5 (vectorized math operations)
        "https://anaconda.org/conda-forge/onemkl-sycl-vm/2025.2.0/download/linux-64/onemkl-sycl-vm-2025.2.0-haf5e11a_628.conda",
        # oneMKL SYCL: Statistics domain
        # Provides libmkl_sycl_stats.so.5
        "https://anaconda.org/conda-forge/onemkl-sycl-stats/2025.2.0/download/linux-64/onemkl-sycl-stats-2025.2.0-haf5e11a_628.conda",
    ],
    sha256s = [
        "758999601fa924a29e4967edc1e5ec257633e55caecf21f0eaa8daa52dfb5c4e",
        "691ceaccf6d960e19d47304d24ca2ee4e807810077e93c1c86c2e32cd6223012",
        "1a44d6a330a26df7ce05e4dd0fb13a5c92c2e3885cb32637fa4920aaa757aa81",
        "4e995c02e5f43265aa830a06e538b2e5ada76b7c2785c26b788d6073ba605b0f",
        "44ceb849a99f9bbe3ad89dac9dcdedb540b3996c69e699a40047d62d51934a0c",
        "84c196a6e243a6f275aa0f040ba02f12d8e9e9bfb5b02f5e58c3160f9bf52887",
        "0748e4f91e328f4ae995013b10ae79966f80cf62a72e76495dfe1841cd022235",
        "3580e30db302602e89e54a0296457dbdafbccd86fe79975f3bf84be0d3ce57c1",
        "e56ec1e4e0fbfa28783a28e99337ca541934cb3aaaa0ecca469a27dab2f3a762",
        "704ecf4872d958806d8c9157f016a4e7588285b111a4c3efe6e6d4110a7d7931",
        "b2cdba1894464927a05115c04bcc1a5b64e25c116c45ae44c75990c101162b35",
        "e5664adaca1c2e15a771b0d67ec7691137c8ba8e0a5a6af6fdffece9ae37692e",
        "ed782c632d4851f98303ab34f47437cbb77d4b9f705b36b62d4b05123c629604",
        "ebf80b94fad4483124c62686b00552b4024e4ec987c83483b4533902a7b854a4",
    ],
    strip_prefixes = [
        "mkl-2025.2.0.data/data",
        "mkl_include-2025.2.0.data/data",
        "mkl_static-2025.2.0.data/data",
        "onemkl_sycl_include-2025.2.0.data/data",
        "mkl_devel_dpcpp-2025.2.0.data/data",
        "onemkl_sycl_datafitting-2025.2.0.data/data",
        "onemkl_sycl_blas-2025.2.0.data/data",
        "onemkl_sycl_dft-2025.2.0.data/data",
        "onemkl_sycl_lapack-2025.2.0.data/data",
        "mkl_dpcpp-2025.2.0.dist-info",
        "onemkl_sycl_sparse-2025.2.0.data/data",
        "onemkl_sycl_rng-2025.2.0.data/data",
        "onemkl_sycl_vm-2025.2.0.data/data",
        "onemkl_sycl_stats-2025.2.0.data/data",
    ],
)

onedal_repo = use_repo_rule("@onedal//dev/bazel/deps:onedal.bzl", "onedal_repo")
onedal_repo(
    name = "onedal_release",
    root_env_var = "DALROOT",
)
